<resources>
    <string name="app_name">PlanR</string>
    <string name="recipes">Recipes</string>
    <string name="calendar">Calendar</string>
    <string name="shopping_list">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="add_meal">Add</string>
    <string name="no_data">No Data</string>
    <string name="n">N</string>
    <string name="saveAdvice">Only press SAVE once you have added all your ingredients</string>
    <string name="enter_an_ingredient">Enter an Ingredient</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="add_a_recipe">Add a Recipe</string>
    <string name="delete">Delete</string>
    <string name="delete_meal">Delete</string>
</resources>