<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addRecipe"
    android:gravity="center_horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_recipe"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/recipe_title"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/recipeTitleInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enter_an_ingredient"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ingredientInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/saveAdvice"
            android:textAlignment="center" />

        <Button
            android:id="@+id/saveRecipeButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save" />


    </LinearLayout>
</RelativeLayout>